<resources>
    <string name="app_name">SpaceMusic</string>
    <string name="contrasena">Contrasena</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="a_tu">a tu</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="no_te_has_registrado">¿No te has registrado?</string>
    <string name="espacio_musical">Espacio Musical</string>
    <string name="registrate_aqui">Registrate Aqui</string>
    <string name="registrarte">Registrarte</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="registro">Registro</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cancelar">Cancelar</string>
    <string name="home" />
    <string name="search" />
    <string name="menubook" />
</resources>